--- a/script.module.audo-dependencies/changelog.txt
+++ b/script.module.audo-dependencies/changelog.txt
@@ -1,3 +1,8 @@
+0.0.2
+- removed bytecode for multiple interpreter compatibility
+- added binaries for armv7l devices
+- removed openelec requirement should work on all linux xbmc installs
+
 0.0.1
 - initial Release
 - Cheetah - 2.4.4
