--- a/script.module.audo-dependencies/changelog.txt
+++ b/script.module.audo-dependencies/changelog.txt
@@ -1,3 +1,6 @@
+0.0.7
+- fix unrar and par2
+
 0.0.6
 - added mako 1.0.1 for sickrage
 - removed 32bit binaries(contact me if you're stuck on a 32bit install)
