--- a/script.module.audo-dependencies/changelog.txt
+++ b/script.module.audo-dependencies/changelog.txt
@@ -1,5 +1,7 @@
 0.1.2
 update to lxml-3.7.1
+update to pyOpenSSL-16.2.0
+update to openssl-1.0.2j
 
 0.1.1
 - removed mako, its now included in sickrage
